*** 19991210_1 by lusky
revved patchlevel to b116
fix for quote dline's being treated as /8's (db)


*** 19991208_1 by lusky
revved patchlevel to b115
DNS coring problem is fixed!! (db)


*** 19991115_2 by lusky
added USE_LOGFILE to config.h
added MFLAGS to toplevel Makefile.in so I can do parallel makes


*** 19991115_1 by lusky
add fix for logging, if you define USE_LOGFILE, stuff will be logged to
  the ircd.log, if you define USE_SYSLOG, stuff will be logged to syslog,
  if you define both stuff will be logged to both. (th)


*** 19991113_2 by lusky
revved patchlevel to b114


*** 19991113_1 by lusky
rewrote the way chanwall was being handled, by moving where the varargs code had to be used (db)
m_userhost old behaviour restored, but rewritten. Need to support
  up to 5 userhost requests, this fixes ircle clients which depend on
  this behaviour. (db)



*** 19991024_1 by lusky
revved patchlevel to b112
disallow -ve limit on mode #channel +l (db)


*** 19991017_1 by lusky
revved patchlevel to b111
commented about NO_JOIN_ON_SPLIT being broken in config.h
removed (+) cruft from idented clients as this was a Tanerism (db)
fixed missing mask check in IP kline code (db)


*** 19991013_5 by lusky
revved patchlevel.h to b110
fixed m_ison to put trailing space on 303 responses
CONNECTFAST is always defined for USE_POLL now, was causing very poor
  accept performance on heavily loaded non-Solaris machines using poll()


*** 19991013_4 by lusky
syncd config.h.dist to config.h


*** 19991013_3 by lusky
added display of logLevel as a string in /set log (db)
updated opers.txt to include set log


*** 19991013_2 by lusky
backported set log from -7, really needs to be here


*** 19991013_1 by lusky
revved patchlevel to b109
fixed botched wild card matching for K/I lines (db)
added INIT_LOG_LEVEL to config.h


*** 19991011_1 by lusky
cptr->fd is <0 in some cases when its being used in send.c (db)


*** 19991010_1 by lusky
fixed bogus strncpy in s_conf.c report by Q (th)

